syntax = "proto3";
message PostDeleted {
  string event_type = 1;
  int32 post_id = 2;
  int32 user_id = 3;
  
}